--- a/www/app/modules/biospecimen/extensions/form-data.html
+++ b/www/app/modules/biospecimen/extensions/form-data.html
@@ -53,7 +53,7 @@
         {{field.value | osBoolValue : 'common.yes' : 'common.no' : 'common.not_specified'}}
       </span>
       <span ng-switch-default>
-         <span ng-bind-html="field.value | linky | osArrayJoin"   </span>
+         <span ng-bind-html="field.value | linky | osArrayJoin"></span>
       </span>
     </span>
   </span>
